# xsystem4

./: .gitmodules  CMakeLists.txt  meson.build
include/: ald_emscripten.h  archive_emscripten.h  debugger.h  input.h  reign.h  sact.h  savedata.h  sprite.h  trace.h  vm.h
include/dungeon/: dungeon.h
include/gfx/: gfx.h
shaders/: reign.f.glsl  reign.v.glsl  reign_outline.v.glsl  reign_shadow.v.glsl
src/: ald_emscripten.c  archive_emscripten.c  asset_manager.c  audio_mixer.c  debug.c  debugger_dap.c  draw.c  effect.c  ffi.c  font_freetype.c  gen_hll_signatures.py  input.c  meson.build  movie_plmpeg.c  resume.c  savedata.c  system4.c  trace.c  video.c  vm.c
src/3d/: 3d_internal.h  reign.c  renderer.c
src/dungeon/: dgn.c  dungeon.c  map.c
src/hll/: ACXLoader.c  ChipmunkSpriteEngine.c  DrawDungeon.c  DrawField.c  DrawGraph.c  DrawMovie.c  Gpx2Plus.c  InputString.c  MonsterInfo.c  MsgSkip.c  MusicSystem.c  PastelChime2.c  ReignEngine.c  SACT2.c  SengokuRanceFont.c  StoatSpriteEngine.c
src/parts/: text.c
